category box spacing, fix filter styles

--- a/common/common.scss
+++ b/common/common.scss
@@ -542,9 +542,9 @@ a.button {
     text-align: left;
     border-left: 0 !important;
     border-bottom: solid 1px lightgray !important;
-    width: 98%;
-    margin: 0 1% 1.5em 1%;
-    padding: 0;
+    width: 94%;
+    margin: 0 3% 1.5em 3%;
+    padding: 15px 0 30px;
 
     .category-box-inner {
       border: 0 !important;
